<resources>
    <string name="app_name">My Flexible Fragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">This Profile</string>
    <string name="this_category">This Category</string>
    <string name="category_lifestyle">Category Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="question_coach">Siapa Orang Paling Tampan Di Dunia?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="fikky_ardianto">Fikky Ardianto</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>

</resources>